--- a/local.yml
+++ b/local.yml
@@ -2,10 +2,11 @@
   connection: local
   become: true
 
-  tasks:
-  - name: Install packages
-    apt:
-      name:
-        - htop
-        - mc
-        - tmux
+  pre_tasks:
+    - name: update repositories
+      apt:
+        update_cache:yes
+      changed_when: False
+
+  taske:
+    - include: tasks/packages.yml
