--- a/local.yml
+++ b/local.yml
@@ -9,6 +9,7 @@
       changed_when: False
 
   tasks:
+    - include: tasks/prerequisites.yml
     - include: tasks/users.yml
     - include: tasks/cron.yml
     - include: tasks/packages.yml
